# api/swagger/swagger.yaml
@@ -252,7 +252,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /schema/{id}/{version}:
+  /schema/iglu/{id}/{version}:
     x-swagger-router-controller: schema
     get:
       security:
@@ -260,8 +260,44 @@ paths:
       description: Returns one Schema
       tags:
         - Schema
-      operationId: schemaGet
+      operationId: schemaIgluGet
       parameters:
+        - name: id
+          in: path
+          required: true
+          description: ''
+          type: string
+        - name: version
+          in: path
+          required: true
+          description: ''
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Schema"
+        "403":
+          description: "Access Denied"
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      security:
+        - Bearer: []
+      description: Creates a new Schema in Iglu
+      tags:
+        - Schema
+      operationId: schemaIgluCreate
+      parameters:
+        - name: schema
+          in: body
+          required: true
+          description: ''
+          type: string
         - name: id
           in: path
           required: true
